--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "anlutro/l4-settings": "^1.4",
         "laravel-lang/common": "^6.7",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
+        "milon/barcode": "^12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
